tdf#113777 Add colon to FontFamily and FontStyle code strings

Change-Id: I30cfe4d09754475b3d40b2b9c50f0e0acd94dba8